Update and rename index.html to stories.html

--- a/stories.html
+++ b/stories.html
@@ -442,7 +442,7 @@
   <main role="main">
     <article>
       <header id="article-desc">
-        <h1 itemprop="headline">Lorem Ipsum</h1>
+        <h1 itemprop="headline">Mobile News</h1>
         <div class="header-author">
           <amp-img src="img/sample.jpg" id="author-avatar" placeholder
             height="16" width="16">
